added bootstrap5 thought cdn in this project

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-comp1></app-comp1>
-<app-comp2shiv></app-comp2shiv>
+<div class="container mt-5">
+    <app-comp1></app-comp1>
+    <app-comp2shiv></app-comp2shiv>
+</div>
