--- a/angular_complete/src/app/comp1/comp1.component.html
+++ b/angular_complete/src/app/comp1/comp1.component.html
@@ -1,1 +1,1 @@
-<h1>this is cli generated component comp1</h1>
+<h1 class="text text-primary" style="text-transform: capitalize;">this is cli generated component comp1</h1>
