added property binding

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="container mt-5">
     <app-comp1></app-comp1>
     <app-comp2shiv></app-comp2shiv>
-    <app-login></app-login>
+    <app-user></app-user>
+    <app-user2></app-user2>
+    <app-user3></app-user3>
+   <app-interpolation></app-interpolation>
+    <app-properybinding></app-properybinding>
 </div>
