added click event binding

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -6,4 +6,5 @@
     <app-user3></app-user3>
    <app-interpolation></app-interpolation>
     <app-properybinding></app-properybinding>
+    <app-eventbinding></app-eventbinding>
 </div>
