added two way data binding ngModel

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -7,4 +7,5 @@
    <app-interpolation></app-interpolation>
     <app-properybinding></app-properybinding>
     <app-eventbinding></app-eventbinding>
+    <app-twowaybinding></app-twowaybinding>
 </div>
