added *ngIf directive

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -4,8 +4,9 @@
     <app-user></app-user>
     <app-user2></app-user2>
     <app-user3></app-user3>
-   <app-interpolation></app-interpolation>
+    <app-interpolation></app-interpolation>
     <app-properybinding></app-properybinding>
     <app-eventbinding></app-eventbinding>
     <app-twowaybinding></app-twowaybinding>
+    <app-ngif></app-ngif>
 </div>
