added *ngFor directives.

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -9,4 +9,5 @@
     <app-eventbinding></app-eventbinding>
     <app-twowaybinding></app-twowaybinding>
     <app-ngif></app-ngif>
+    <app-ngfor></app-ngfor>
 </div>
