added *ngSwtich directive.

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -10,4 +10,5 @@
     <app-twowaybinding></app-twowaybinding>
     <app-ngif></app-ngif>
     <app-ngfor></app-ngfor>
+    <app-ngswitch></app-ngswitch>
 </div>
