--- a/angular_complete/src/app/directives/ngfor/ngfor.component.html
+++ b/angular_complete/src/app/directives/ngfor/ngfor.component.html
@@ -1,17 +1,25 @@
-<h1 class="text text-danger mt-5"> This is *ngFor</h1>
-<table class="table" *ngFor="let x of person">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Age</th>
-        <th scope="col">Address</th>
-        </tr>
-    </thead>
-    <tbody>
-     <tr>
-        <td>{{x.name}}</td>
-        <td>{{x.address}}</td> 
-        <td>{{x.age}}</td>
-     </tr>
-    </tbody>
-  </table>
+<h1 class="text text-danger mt-5">This is *ngFor</h1>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col" (click)="sortData('name')">Name</th>
+      <th scope="col" (click)="sortData('age')">Age</th>
+      <th scope="col" (click)="sortData('address')">Address</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let x of visibleItems">
+      <td>{{x.name}}</td>
+      <td>{{x.age}}</td>
+      <td>{{x.address}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- Pagination -->
+<div class="pagination">
+  <button class="btn btn-primary" (click)="prevPage()" [disabled]="currentPage === 1">Previous</button>
+  <span>{{currentPage}} / {{totalPages}}</span>
+  <button class="btn btn-primary" (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
+</div>
