made custom directive and used this.

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -11,4 +11,5 @@
     <app-ngif></app-ngif>
     <app-ngfor></app-ngfor>
     <app-ngswitch></app-ngswitch>
+    <app-customdirectiveusing></app-customdirectiveusing>
 </div>
