added template refrence variable

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -12,4 +12,5 @@
     <app-ngfor></app-ngfor>
     <app-ngswitch></app-ngswitch>
     <app-customdirectiveusing></app-customdirectiveusing>
+    <app-template-ref></app-template-ref>
 </div>
