added all build in pipes

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -13,4 +13,6 @@
     <app-ngswitch></app-ngswitch>
     <app-customdirectiveusing></app-customdirectiveusing>
     <app-template-ref></app-template-ref>
+    <app-pipe></app-pipe>
+
 </div>
