added custom pipe made manually.

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -14,5 +14,5 @@
     <app-customdirectiveusing></app-customdirectiveusing>
     <app-template-ref></app-template-ref>
     <app-pipe></app-pipe>
-
+    <app-custom></app-custom>
 </div>
