added reactive form basics

--- a/angular_complete/src/app/app.component.html
+++ b/angular_complete/src/app/app.component.html
@@ -15,4 +15,6 @@
     <app-template-ref></app-template-ref>
     <app-pipe></app-pipe>
     <app-custom></app-custom>
+   <app-crud></app-crud>
+    <app-reactive></app-reactive>
 </div>
