--- a/angular_complete/src/app/FORMS/reactive/reactive.component.html
+++ b/angular_complete/src/app/FORMS/reactive/reactive.component.html
@@ -30,3 +30,35 @@
 </div>
 <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<h1 class="text text-danger">Nested Form Groups</h1>
+<form action="" class="form" [formGroup]="profile2" (ngSubmit)="submitProfile2()">
+<div class="m-3">
+<label for="name" class="form-label">Name:</label>
+<input type="text" id="name" formControlName="name" class="form-control" required>
+</div>
+<div class="m-3">
+<label for="emailid" class="form-label">Email:</label>
+<input type="email" id="emailid" formControlName="emailid" class="form-control" required>
+</div>
+<div class="m-3">
+<label for="mobileNo" class="form-label">Mobile Number:</label>
+<input type="number" formControlName="mobileNo" id="mobileNo" class="form-control" required>
+</div>
+<div class="m-3" formGroupName="address2">
+<h3 class="text text-secondary">Address</h3>
+<div class="m-2">
+<label for="street" class="form-label">Street</label>
+<input type="text" formControlName="street"id='street' class="form-control">
+</div>
+<div class="m-2">
+<label for="city" class="form-label">City</label>
+<input type="text" formControlName="city" id="city" class="form-control" required>
+</div>
+<div class="m-2">
+<label for="state" class="form-label">State</label>
+<input type="text" formControlName="state" id="state" class="form-control" required>
+</div>
+</div>
+<button type="submit" class="btn btn-primary">Submit</button>
+</form>
